# Study__CodingTest

./: .gitignore  CMakeLists.txt  README.md  Study__CodingTest.sln  Template
CPP/: 12100.cpp  13458.cpp  13460.cpp  14499.cpp  14500.cpp  14501.cpp  14502.cpp  14503.cpp  14888.cpp  14889.cpp  14890.cpp  14891.cpp  15683.cpp  15684.cpp  15685.cpp  15686.cpp  16234.cpp  16235.cpp  3190.cpp  5373.cpp  CPP.vcxproj  CPP.vcxproj.filters  Manager.h  Template.cpp
backjoon/: 1003-fibonazzi_function.cc  1012-OrganicCabbage.cc  1062-Teach.cc  1068-Tree.cc  10709-WeatherCaster.cc  10808-AlphabatNumber.cc  10809-SearchAlphabet.cc  1094-Stick.cc  10988-CheckPellinDrom.cc  11047-CoinZero.cc  11050-BinomialCoefficient1.cc  11051-BinomialCoefficient2.cc  11399-ATM.cc  11401-BinomialCoefficient3.cc  11507-CardSet.cc  1152-NumberOfWord.cc  1157-WordStudy.cc  1159-BascketBallGame.cc  11654-AsciiCode.cc  11655-ROT13.cc  11720-SumOfNumbers.cc  11723-Set.cc  1189-ComeBackHome.cc  1202-JewelThief.cc  12100-2048.cpp  1213-MakePelinDrom.cc  1260-DFSAndBFS.cc  1285-FlipTheCoin.cc  12851-HideAndSeek2.cc  12865-OrdinaryBackpack.cc  13144-ListOfUniqueNumbers.cc  1316-GroupWordChecker.cc  13244-Tree.cc  1325-EfficientHacking.cc  13305-GasStation.cc  13458-TestSupervisor.cpp  13460-ExitBead.cpp  13913-HideAndSeek4.cc  1436-MovieDirector.cc  14391-PieceOfPaper.cc  (+122 more)
cmake_test/: main-2.cc  main.cc
programmers/: 00001-UnfinishedPlayer.cc  00003-Camouflage.cc  00004-BestAlbum.cc  00005-JoggingSuit.cc  00006-Joystick.cc  00007-MakeBigNumber.cc  00008-Lifeboat.cc  00009-ConnectIsland.cc  00010-CompressString.cc  00011-KaKaoFriendsColoringBook.cc  00012-OpenChatRoom.cc  00013-TakeGroupPhoto.cc  00014-124CountryNumber.cc  00015-DevelopFunction.cc  00016-TargetNumber.cc  00017-MakePairAndErase.cc  00018-RotateMatrixBoarder.cc  00019-MenuRenewer.cc  00020-ConvertParenthesis.cc  00021-CheckKeepingDistance.cc  00022-ReceiveReportResult.cc  00023-MaximizationEquation.cc  00024-HighstRankAndLowerRankInLotto.cc  00025-PathOfLightCycle.cc  00026-Printer.cc  00027-SearchRanking.cc  00028-ShortestPathInGameMap.cc  00029-NewsClustering.cc  00030-MoreSpicy.cc  00031-StackPrice.cc  00032-TruckThatCrossUnderBridge.cc  00033-PredictableConfrontationTable.cc  00034-Carpet.cc  00035-Tuple.cc  00036-ExhaustedDegree.cc  00037-CalcultateParkingFee.cc  00038-SecondaryKey.cc  00039-TtangTtameoKgi.cc  00040-NextBigNumber.cc  00041-BiggestNumber.cc  (+25 more)
real_test/: 00001-Line_1.cc  00002-Line_2.cc  00003  00003-Line_3.cc
test_case/: test.txt
test_case/backjoon/: 1912-ContinuousSum.txt  9251-LCS.txt
